[package]
name = "rust-paper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.20", features = ["derive"] }
confy = "0.6.1"
dirs = "5.0.1"
futures = "0.3.31"
image = "0.25.1"
lazy_static = "1.5.0"
lock = "0.1.0"
regex = "1.10.5"
reqwest = {version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["full"] }
